--- a/.github/actions/setup-rust/action.yml
+++ b/.github/actions/setup-rust/action.yml
@@ -63,7 +63,7 @@ runs:
         echo 'SKIP_SLOW_TESTS=1' >> $ENV_FILE
 
         HOST_TARGET_TRIPLE="$(rustc -Vv | sed -n 's/^host: //p')"
-        echo "HOST_TARGET_TRIPLE=\"$HOST_TARGET_TRIPLE\"" >> $ENV_FILE
+        echo "HOST_TARGET_TRIPLE=$HOST_TARGET_TRIPLE" >> $ENV_FILE
     - name: Setup sccache
       if: ${{ inputs.sccache }}
       uses: ./.github/actions/sccache
