--- a/.github/actions/setup-rust/action.yml
+++ b/.github/actions/setup-rust/action.yml
@@ -64,6 +64,8 @@ runs:
 
         HOST_TARGET_TRIPLE="$(rustc -Vv | sed -n 's/^host: //p')"
         echo "HOST_TARGET_TRIPLE=$HOST_TARGET_TRIPLE" >> $ENV_FILE
+        # Set HOST_TARGET_TRIPLE as the default build target.
+        echo "CARGO_BUILD_TARGET=$HOST_TARGET_TRIPLE" >> $ENV_FILE
     - name: Setup sccache
       if: ${{ inputs.sccache }}
       uses: ./.github/actions/sccache
