--- a/.github/workflows/build_lint.yml
+++ b/.github/workflows/build_lint.yml
@@ -72,7 +72,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: fmt
-          args: --all -- --check
+          args: -- --unstable-features --check
       - name: Clippy
         uses: actions-rs/clippy-check@v1
         with:
