--- a/.github/workflows/build_lint.yml
+++ b/.github/workflows/build_lint.yml
@@ -122,6 +122,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Setup
         uses: ./.github/actions/setup-rust
+        with:
+          sccache: false
       - name: Install cbindgen
         uses: actions-rs/install@v0.1
         with:
@@ -140,6 +142,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Setup
         uses: ./.github/actions/setup-rust
+        with:
+          sccache: false
       - name: Get latest CMake and ninja
         # Using 'latest' branch, the most recent CMake and ninja are installed.
         uses: lukka/get-cmake@latest
