Disable fail-fast on lint-rust job

--- a/.github/workflows/build_lint.yml
+++ b/.github/workflows/build_lint.yml
@@ -48,6 +48,7 @@ jobs:
   lint-rust:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         workspace:
           # via `grep -irl '\[workspace\]' **/Cargo.toml | xargs dirname`
