Try disabling sccache

--- a/.github/actions/setup-rust/action.yml
+++ b/.github/actions/setup-rust/action.yml
@@ -54,5 +54,5 @@ runs:
         # Set HOST_TARGET_TRIPLE as the default build target.
         echo "CARGO_BUILD_TARGET=$HOST_TARGET_TRIPLE" >> $ENV_FILE
     - name: Setup sccache
-      if: ${{ inputs.sccache }}
+      if: ${{ inputs.sccache }} && false
       uses: ./.github/actions/sccache
