Add missing TMP_DIR env var

--- a/.github/actions/run-mc-tests/action.yml
+++ b/.github/actions/run-mc-tests/action.yml
@@ -21,6 +21,8 @@ runs:
         use-tool-cache: true
     - name: Run MC tests
       shell: bash
+      env:
+        TMP_DIR: ${{ inputs.tmp_dir }}
       run: |
         # tell the operating system to remove the file size limit on core dump files
         ulimit -c unlimited
