Replace --frozen with check-dirty-git

--- a/.github/actions/run-mc-tests/action.yml
+++ b/.github/actions/run-mc-tests/action.yml
@@ -52,3 +52,5 @@ runs:
         name: core_dumps
         path: core.*
         if-no-files-found: ignore
+    - name: Check dirty git
+      uses: ./.github/actions/check-dirty-git
