--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Run tests
         uses: ./.github/actions/run-mc-tests
         with:
-          test_command: cargo test --workspace --exclude "mc-fog-*" --exclude "mc-consensus-*" --frozen --target "$HOST_TARGET_TRIPLE" --no-fail-fast --tests -j 4
+          test_command: cargo test --workspace --exclude "mc-fog-*" --exclude "mc-consensus-*" --target "$HOST_TARGET_TRIPLE" --no-fail-fast --tests -j 4
 
   run-consensus-tests:
     runs-on: ubuntu-latest
@@ -37,7 +37,7 @@ jobs:
       - name: Run tests
         uses: ./.github/actions/run-mc-tests
         with:
-          test_command: cargo test --workspace --package "mc-consensus-*" -j 4 --frozen --no-fail-fast
+          test_command: cargo test --workspace --package "mc-consensus-*" -j 4 --no-fail-fast
 
   run-fog-tests:
     runs-on: ubuntu-latest
@@ -50,7 +50,7 @@ jobs:
       - name: Run tests
         uses: ./.github/actions/run-mc-tests
         with:
-          test_command: cargo test --workspace --package "mc-fog-*" --exclude "mc-fog-ingest-*" -j 4 --frozen --no-fail-fast
+          test_command: cargo test --workspace --package "mc-fog-*" --exclude "mc-fog-ingest-*" -j 4 --no-fail-fast
 
   run-fog-ingest-tests:
     runs-on: ubuntu-latest
@@ -63,7 +63,7 @@ jobs:
       - name: Run tests
         uses: ./.github/actions/run-mc-tests
         with:
-          test_command: cargo test --workspace --package "mc-fog-ingest-*" -j 4 --frozen --no-fail-fast
+          test_command: cargo test --workspace --package "mc-fog-ingest-*" -j 4 --no-fail-fast
 
 
 # via https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#example-only-cancel-in-progress-jobs-or-runs-for-the-current-workflow
