--- a/.github/actions/setup-rust/action.yml
+++ b/.github/actions/setup-rust/action.yml
@@ -52,7 +52,7 @@ runs:
         echo "HOST_TARGET_TRIPLE=$HOST_TARGET_TRIPLE" >> $GITHUB_ENV
         # Set HOST_TARGET_TRIPLE as the default build target.
         echo "CARGO_BUILD_TARGET=$HOST_TARGET_TRIPLE" >> $GITHUB_ENV
-    - name: Install SGX
+    - name: Install SGX SDK
       shell: bash
       run: |
         [[ -d /opt/intel/sgxsdk ]] || sudo ./docker/install_sgx.sh
