--- a/.github/actions/setup-rust/action.yml
+++ b/.github/actions/setup-rust/action.yml
@@ -9,7 +9,7 @@ inputs:
   default:
     description: Set installed toolchain as a default toolchain
     type: boolean
-    default: false
+    default: true
     required: false
   profile:
     description: Rust toolchain profile
@@ -65,3 +65,6 @@ runs:
         echo "LD_LIBRARY_PATH=$LD_LIBRARY_PATH" >> $GITHUB_ENV
         echo "$SGX_SDK/bin" >> $GITHUB_PATH
         echo "$SGX_SDK/bin/x64" >> $GITHUB_PATH
+    - name: Setup sccache
+      if: ${{ inputs.sccache }}
+      uses: ./.github/actions/sccache
